fixed menu background and position on small devices

--- a/style.css
+++ b/style.css
@@ -259,7 +259,8 @@ footer .footer-copyright p{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
+        padding-top: 12rem;
         z-index: 10;
         opacity: 0;
         pointer-events: none;
